discussion/kv_engine/147712/147712_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44168: Remove duplicate config setup for ::replaceCouchKVStore()

Change-Id: Ia3ea4607017f74435c969dad4cb331b5cbe5e963

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-03-04 10:07:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-04 10:36:15.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16933/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16933/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7421/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4253:63: error: expected ")" [clang-diagnostic-error]
    replaceCouchKVStore(dynamic_cast<CouchKVStoreConfig&>(ops);
                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4253:24: note: to match this "("
    replaceCouchKVStore(dynamic_cast<CouchKVStoreConfig&>(ops);
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7421/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4253:63:
error: expected ")" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7421/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34004/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_stream_test.cc(4253): error C2143: syntax error: missing ")" before ";" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34004/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29213/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4253:63:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29213/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9385/ : FAILURE

Compile error at [2021-03-04T10:30:09.696Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4253:63:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9385/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9171/ : FAILURE

Compile error at [2021-03-04T10:30:09.949Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4253:63:
error: expected ?)? before ?;? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9171/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8087/ : FAILURE

Compile error at [2021-03-04T10:10:42.506Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4253:63:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8087/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9030/ : FAILURE

Compile error at [2021-03-04T10:21:45.256Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4253:63:
error: expected ?)? before ?;? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9030/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5959/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
